ingress/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "app1.mydomain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-v1
            port:
              number: 8080
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: api-server-svc
            port:
              number: 9090
  - host: "app2.mydomain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-server-svc
            port:
              number: 9090
